[package]
name = "crayon-cli"
version = "0.6.0"
authors = ["maojingkai <oammix@gmail.com>"]

[dependencies]
crayon = { git = "https://github.com/shawnscode/crayon", rev = "90a6bb2" }
crayon-3d = { git = "https://github.com/shawnscode/crayon", rev = "90a6bb2" }
crayon-audio = { git = "https://github.com/shawnscode/crayon", rev = "90a6bb2" }

env_logger = "0.5.13"

failure = "0.1.2"
clap = "2.32.0"

serde = { version = "1.0.79", features = ["serde_derive"] }
serde_json = "1.0.27"
toml = "0.4.6"

byteorder = "1.2.6"
crc = "1.8.1"
uuid = { version = "0.7.1", features = ["v4", "serde"] }
walkdir = "2.2.5"

vorbis = "0.1.0"
claxon = "0.4.1"
hound = "3.4.0"
minimp3 = "0.3.0"