[package]
name = "crayon-cli"
version = "0.7.0"
authors = ["maojingkai <oammix@gmail.com>"]

[dependencies]
crayon = { git = "https://github.com/shawnscode/crayon", rev = "f6400e1" }
crayon-world = { git = "https://github.com/shawnscode/crayon", rev = "f6400e1" }
crayon-audio = { git = "https://github.com/shawnscode/crayon", rev = "f6400e1" }

env_logger = "0.6.0"

failure = "0.1.3"
clap = "2.32.0"

serde = { version = "1.0.80", features = ["serde_derive"] }
serde_json = "1.0.33"
toml = "0.4.8"

byteorder = "1.2.7"
crc = "1.8.1"
uuid = { version = "0.7.1", features = ["v4", "serde"] }
walkdir = "2.2.7"

vorbis = "0.1.0"
claxon = "0.4.1"
hound = "3.4.0"
minimp3 = "0.3.0"